[package]
authors = ["Ares Technologies <linhai@cancanyou.com>"]
description = 'Ares Oracle Finance.'
edition = '2018'
license = 'MIT'
name = 'oracle-finance'
readme = 'README.md'
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
version = '4.0.1'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
ares-oracle-provider-support = { default-features = false, path = "../ares-oracle-provider-support" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.28" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
hex = { version = "0.4", default-features = false }
log = { version = "0.4.17", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }

[dev-dependencies]
serde = { version = '1.0.143', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }


[features]
default = ['std']

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]

std = [
    "ares-oracle-provider-support/std",
    "log/std",
    "scale-info/std",
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'hex/std',
    'pallet-balances/std',
    'pallet-session/std',
    'sp-application-crypto/std',
    'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']

