[package]
authors = ['Ares Team']
description = 'Substrate FRAME pallet template for defining custom runtime logic.'
edition = '2018'
license = 'Unlicense'
name = 'pallet-price-estimates3'
publish = false
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
version = '3.0.1'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
ares-oracle = { default-features = false, path = '../ares-oracle' }
ares-oracle-provider-support = { default-features = false, path = '../ares-oracle-provider-support' }
bound-vec-helper = { default-features = false, path = "../../tools/bound-vec-helper" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.17" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-keystore = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17", optional = true }

[dev-dependencies]
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    "ares-oracle/std",
    "bound-vec-helper/std",
    "hex/std",
    "scale-info/std",
    "sp-io/std",
    "sp-keystore",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "ares-oracle-provider-support/std",
    "sp-runtime/std",
    "pallet-balances/std",
]
try-runtime = ['frame-support/try-runtime']