[package]
authors = ['kami']
description = 'Staking Extend'
edition = '2018'
license = 'Unlicense'
name = 'staking-extend'
publish = false
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
version = '3.0.4'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
frame-system = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
frame-election-provider-support = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-core = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-application-crypto = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-keystore = { git = "https://github.com/zzm-Zhong/substrate", optional = true, branch = "polkadot-v0.9.15-fix" }
sp-io = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-std = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-staking = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
pallet-authorship = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
pallet-election-provider-multi-phase = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
pallet-staking-reward-curve = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
pallet-authority-discovery = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
pallet-staking = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
pallet-balances = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
pallet-timestamp = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }

ares-oracle-provider-support = { default-features = false, path = "../ares-oracle-provider-support" }
pallet-session = { features = ["historical"], default-features = false, path = "../session" }
#sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/zzm-Zhong/substrate", tag = "monthly-2021-09+1" }
#[dev-dependencies]

[dev-dependencies]
serde = { version = '1.0.130'}
sp-npos-elections = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
pallet-bags-list = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "sp-application-crypto/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "lite-json/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keystore/std",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
    "pallet-balances/std",
    "pallet-authorship/std",
    "pallet-session/std",
    "pallet-staking/std",
    "sp-staking/std",
    "ares-oracle-provider-support/std",
    #    "sp-consensus-aura/std",
    #    "pallet-timestamp/std",
    "pallet-authority-discovery/std",
    "frame-election-provider-support/std",
    "pallet-election-provider-multi-phase/std",
]
try-runtime = ["frame-support/try-runtime"]


