[package]
name = "bound-vec-helper"
version = "1.0.1"
edition = "2018"

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }

[features]
default = ['std']
std = [
    'frame-support/std',
    'sp-std/std',
]

